test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST_api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 26 Jan 2026 03:06:38 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="IfnFstUQ0KP+3Bm8H3XMqvQHjNJZgcUx", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 7

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}